# CorrectionsAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: corrections_agent_costs.md  data_collection_ground_truth.md  evaluation_acceptance_criteria.md  threat_model_risk_register.md
docs/users/: edge_case_catalog.md  user_journey_jobs_to_be_done.md
eval/model_drift/: __init__.py  generate_drift_report.py  generate_test_data.py
eval/model_evaluation/: __init__.py  datasets.py  judging.py  metrics.py  reporting.py  runner.py  schemas.py
front_end/: package-lock.json  package.json  tailwind.config.js
front_end/src/: App.jsx  index.css
mock_apis/: __init__.py
mock_apis/cloud_apis/: __init__.py  mock_cloud_watch.py  mock_dynamodb.py  mock_model_registry.py  mock_s3.py  mock_secrets_manager.py  transport.py
mock_apis/internal_apis/: __init__.py  app.py  conversation_api.py  incident_report_api.py  prisoner_info_api.py  schemas.py  user_report_api.py
mock_apis/scripts/: generate_dummy_data.py
mock_apis/tests/: __init__.py  conftest.py  test_conversation_api.py  test_incident_report_api.py  test_mock_cloud_watch.py  test_mock_dynamodb.py  test_mock_model_registry.py  test_mock_s3.py  test_mock_secrets_manager.py  test_prisoner_info_api.py  test_user_report_api.py
scripts/: cleanup_project.py  console_demo.py  run_dev.sh  setup_dev.sh
services/: cloudwatch_client.py  run_services.py
services/agent/: app.py  config_loader.py  prompt.py  schemas.py  service.py
train/: train_relevance_check.py  train_safety_check.py
(+189 files in other folders)
